nejake upravy, co som kedysi zjavne spravil a teraz to idem dalej zmazat a prejst na maven projekty